assets/css/main.css
@font-face {
  font-family: 'Poppins-bold';
  src: url('./fonts/Poppins-Bold.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Poppins-regular';
  src: url('./fonts/Poppins-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Poppins-extra-light';
  src: url('./fonts/Poppins-ExtraLight.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Poppins-thin';
  src: url('./fonts/Poppins-Thin.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

/* Fonts */
:root {
  --default-font: "Poppins-regular", sans-serif;
  --default-font-bold: "Poppins-bold", sans-serif;
  --default-font-thin: "Poppins-thin", sans-serif;
  --default-font-extra-light: "Poppins-extra-light", sans-serif;
}


/* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
:root {
  --background-color: #393E46;
  --default-color: #C1C2C4;
  --heading-color: #EEEEEE;
  --surface-color: #222831;
  --contrast-color: #ffffff;
  --accent-color: #00ADB5;
}

/* Smooth scroll */
:root {
  scroll-behavior: smooth;
}

/*--------------------------------------------------------------
# General Styling & Shared Classes
--------------------------------------------------------------*/
body {
  color: var(--default-color);
  font-family: var(--default-font-extra-light);
  font-size: 18px;
  font-weight: 200;
  line-height: normal;
}

p {
  line-height: 32px;
}

body::before {
  content: '';
  background-size: cover;
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  opacity: 15%;
  z-index: -1;
}

a {
  color: var(--accent-color);
  text-decoration: none;
  transition: 0.3s;
}

a:hover {
  color: color-mix(in srgb, var(--default-color), transparent 25%);
  text-decoration: none;
}

.heading {
  font-size: 64px;
  text-align: left;
  font-weight: bold;
  line-height: 60px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--heading-color);
  font-family: var(--default-font);
}

/* PHP Email Form Messages
------------------------------*/
.php-email-form .error-message {
  display: none;
  background: #df1529;
  color: #ffffff;
  text-align: left;
  padding: 15px;
  margin-bottom: 24px;
  font-weight: 600;
}

.php-email-form .sent-message {
  display: none;
  color: #ffffff;
  background: #059652;
  text-align: center;
  padding: 15px;
  margin-bottom: 24px;
  font-weight: 600;
}

.php-email-form .loading {
  display: none;
  background: var(--surface-color);
  text-align: center;
  padding: 15px;
  margin-bottom: 24px;
}

.php-email-form .loading:before {
  content: "";
  display: inline-block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  margin: 0 10px -6px 0;
  border: 3px solid var(--accent-color);
  border-top-color: var(--surface-color);
  animation: php-email-form-loading 1s linear infinite;
}

@keyframes php-email-form-loading {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

/*--------------------------------------------------------------
# Global Header
--------------------------------------------------------------*/
.header {
  color: var(--default-color);
  background-color: var(--background-color);
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  padding: 16px;
  transition: all ease-in-out 0.3s;
  overflow-y: auto;
  z-index: 997;
  display: flex;
  align-items: center;
  gap: 8px;
}

/* @media (max-width: 768px) {
  .header {
    padding-left: 0;
  }
} */


.header .profile-img img {
  margin: 15px auto;
  display: block;
  width: 120px;
  border: 8px solid color-mix(in srgb, var(--default-color), transparent 85%);
}

.header .logo {
  line-height: 1;
}

.header .logo img {
  max-height: 32px;
  margin-right: 8px;
}

.header .logo h1 {
  font-size: 24px;
  margin: 0;
  font-weight: 700;
  color: var(--default-color);
  opacity: .8;
}

.header .social-links {
  margin: 0 0 20px 0;
}

.header .social-links a {
  font-size: 16px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  background: color-mix(in srgb, var(--default-color), transparent 90%);
  color: var(--default-color);
  margin: 0 2px;
  border-radius: 50%;
  text-align: center;
  width: 40px;
  height: 40px;
  transition: 0.3s;
}

.header .social-links a:hover {
  color: var(--contrast-color);
  background: var(--accent-color);
}

/* @media (min-width: 769px) {
  .header {
    width: 100%;
    align-items: center;
  }
  .navmenu ul {
    display: flex;
    padding: 0;
  }
} */

.header-show .navmenu {
  left: 0;
}

.header .header-toggle {
  color: var(--default-color);
  font-size: 32px;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  cursor: pointer;
  z-index: 9999;
  transition: background-color 0.3s;
}

.header.header-show .header-toggle {
  background: none;
}

.header .header-toggle:hover {
  color: var(--default-color);
  background-color: color-mix(in srgb, var(--background-color), transparent 20%);
}

/*--------------------------------------------------------------
# Navigation Menu
--------------------------------------------------------------*/
.mobile-nav-toggle {
  display: none;
}

.navmenu {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  z-index: 9997;
}

.navmenu ul {
  list-style: none;
  margin: 0;
}

.navmenu a,
.navmenu a:focus {
  color: var(--nav-color);
  padding: 15px 10px;
  font-family: var(--default-font);
  font-size: 16px;
  font-weight: 400;
  display: flex;
  align-items: center;
  white-space: nowrap;
  transition: 0.3s;
  width: 100%;
}

.navmenu a .navicon,
.navmenu a:focus .navicon {
  font-size: 20px;
  margin-right: 10px;
}
/* ... */

